crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__compile_script_setup_with_next_line_define_props_assignment.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from "vue";
import { computed } from "vue";
const __sfc__ = /* @__PURE__ */ _defineComponent({
  __name: "Test",
  props: { name: {
    type: String,
    required: true
  } },
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const props = __props;
    const greeting = computed(() => props.name);
    const __returned__ = {
      computed,
      greeting,
      props
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});
