crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__compile_script_setup_with_next_line_define_slots_assignment.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from "vue";
import { useSlots as _useSlots } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "Test",
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const slots = _useSlots();
    const hasDefault = !!slots.default;
    const __returned__ = {
      hasDefault,
      slots
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});
