crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__compile_script_setup_with_props_destructure.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from "vue";
import { computed } from "vue";
// Reactive Props Destructure (Vue 3.5+)
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "Test",
  props: { count: Number },
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const double = computed(() => __props.count * 2);
    const __returned__ = {
      computed,
      double
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});
