crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__default_import_type_only_with_template.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import Foo from './foo'

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'Test',
  props: {
    value: { type: null as unknown as PropType<Foo>, required: true },
  },
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const props = __props
  const __returned__ = { props }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});
