crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__import_used_both_type_and_runtime.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { SomeClass } from './mod'

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'Test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const instance: SomeClass = new SomeClass()
  const __returned__ = { SomeClass, instance }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});
